@@ -1,7 +1,8 @@
 int within_fuzz (double x, double y); /* approximate comparison function */
 
 int 
-within_fuzz (double observed, double expected)
+within_fuzz (const double observed, const double expected)
 {
-  return fabs ((observed - expected)/expected) < 0.00001;
+  const double rel = fabs ((observed - expected)/expected) ;
+  return (rel < 1e-10);
 }
