@@ -2,9 +2,8 @@
 
 #include "source.h"
 
-static
-double sum_of_squares (const BASE data[], const size_t n,
-		       const double mean);
+static double 
+compute_variance (const BASE data[], const size_t n, const double mean);
 
 double 
 FUNCTION(gsl_stats,variance) (const BASE data[], const size_t n)
@@ -40,9 +39,7 @@ double
 FUNCTION(gsl_stats,variance_with_mean) (const BASE data[], const size_t n, 
 					const double mean)
 {
-  const double sum = sum_of_squares (data, n, mean);
-  const double variance = sum / n;
-
+  const double variance = compute_variance (data, n, mean);
   return variance;
 }
 
@@ -50,8 +47,8 @@ double
 FUNCTION(gsl_stats,est_variance_with_mean) (const BASE data[], const size_t n,
 					    const double mean)
 {
-  const double sum = sum_of_squares (data, n, mean);
-  const double est_variance = sum / (n - 1);
+  const double variance = compute_variance (data, n, mean);
+  const double est_variance = variance * ((double)n / (double)(n - 1));
   
   return est_variance;
 }
@@ -60,8 +57,8 @@ double
 FUNCTION(gsl_stats,sd_with_mean) (const BASE data[], const size_t n,
 				  const double mean)
 {
-  const double sum = sum_of_squares (data, n, mean);
-  const double sd = sqrt (sum / n);
+  const double variance = compute_variance (data, n, mean);
+  const double sd = sqrt (variance);
 
   return sd;
 }
@@ -70,29 +67,27 @@ double
 FUNCTION(gsl_stats,est_sd_with_mean) (const BASE data[], const size_t n,
 				      const double mean)
 {
-  const double sum = sum_of_squares (data, n, mean);
-  const double est_sd = sqrt (sum / (n - 1));
+  const double variance = compute_variance (data, n, mean);
+  const double est_sd = sqrt (variance * ((double)n / (double)(n - 1)));
 
   return est_sd;
 }
 
 static double 
-sum_of_squares (const BASE data[], const size_t n,
-		const double mean)
+compute_variance (const BASE data[], const size_t n, const double mean)
 {
   /* takes a dataset and finds the variance */
 
-  double sum = 0, sum2 = 0;
+  double variance = 0 ;
   size_t i;
 
   /* find the sum of the squares */
   for (i = 0; i < n; i++)
     {
       const double delta = (data[i] - mean);
-      sum += delta ;  /* FIXME: round off correction, does it work??*/
-      sum2 += delta * delta;
+      variance += (delta * delta - variance) / ((double)(i + 1));
     }
-
-  return sum2 - (sum * sum / n) ;
+  
+  return variance ;
 }
 
